bench: expose Lucene JVM options